--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -90,6 +90,7 @@ ul
       left: 26vw;
       padding: 0;
       margin: 0;
+      z-index: 2;
 }
 
 li{
@@ -108,6 +109,7 @@ li{
   top: 13vh;
   left: 8vw;
   margin: 0;
+  z-index: 2;
 
 }
 
@@ -126,9 +128,10 @@ li{
 .Biglogo {
   position: fixed;
   z-index: 1;
-  top: 32vh;
-  right: 10vw;
-  height: 40vh;
+  top: 29vh;
+  right: 0w;
+  height: 47vh;
+  width: 279px;
 }
 
 
@@ -142,6 +145,7 @@ top: 34vh;
 right: 2vw;
 height: 92vh;
 width: 102;
+z-index: 2;
 }
 
 a{
@@ -149,13 +153,44 @@ a{
   text-decoration: none;
 }
 
-.scroll {
-  width: 600px;
-  height: 180px;
-  margin: 100px auto;
-  overflow: auto;
-  white-space: nowrap;
-  margin: 20px 10px 0 10px;
+.perspective {
+  width: 700px;
+  height: 530px;
+  position:relative;
+  z-index: 1;
+  left:50%;
+  margin-left: -350px;
+  margin-top:5vh;
+  margin-bottom: 300px;
+  background-color:
 
+}
+ .imagebox {
+overflow-y:  hidden;
+overflow-x: auto;
+width: 400px;
+height: 100%;
+float:right;
+}
+
+.description{
+float:left;
+width: 200px;
+font-size: 20pt
+
+
+}
+
+#perspective1 .imagebox img {
+  width: 400px;
+  margin-right: 6px;
+}
+
+#perspective1 .imagebox img:nth-child(4){
+  margin-right: 0;
+}
+
+.imgscroll {
+  width: 1630px;
 
 }
